# distributed-HGNNs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  main.cpp  matrix.cpp  matrix.h  test.py  timing_info.txt  visualize.py
config/: 128.yaml  256.yaml  32.yaml  64.yaml  dist-model-1k.yaml  dist-model-double.yaml  dist-model.yaml  forward_timing.yaml  gplus_config.yaml  paper_config.yaml  test.yaml  torch-model-w.yaml  torch-model.yaml  w_128.yaml  w_32.yaml  w_64.yaml
data/gplus/: DVH.mtx  invDE_HT_DVH.mtx  labels.mtx
data/m_g_ms_gs/: dense-test.mtx  idx_test_m_g_ms_gs.csv  idx_train_m_g_ms_gs.csv  labels.csv  lbls_m_g_ms_gs.csv  test.mtx  test_sol.mtx
experiments/: test.yaml
libs/CombBLAS/include/CombBLAS/: DenseParMat.h  FullyDistVec.h  ParFriends.h  SpDCCols.h  SpParMat.cpp  SpParMat.h
libs/distributed_sddmm/: CMakeLists.txt  main.cpp  mkl_test.cpp
libs/libtorch/: build-hash  build-version
libs/libtorch/include/ATen/: CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  Config.h  Functions.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h  VmapGeneratedPlumbing.h
libs/libtorch/include/ATen/core/: TensorBody.h  aten_interned_strings.h
libs/libtorch/include/ATen/ops/: _cslt_sparse_mm.h  _cslt_sparse_mm_cuda_dispatch.h  _cslt_sparse_mm_native.h  _cslt_sparse_mm_ops.h  _flash_attention_forward.h  _flash_attention_forward_cuda_dispatch.h  _flash_attention_forward_native.h  _flash_attention_forward_ops.h
libs/libtorch/include/torch/csrc/api/include/torch/: version.h
libs/libtorch/lib/: libgomp-a34b3233.so.1
libs/libtorch/share/cmake/Caffe2/: Caffe2Config.cmake
libs/libtorch/share/cmake/Torch/: TorchConfig.cmake  TorchConfigVersion.cmake
model/: model.cpp  model.h
preprocessing/: generate_matrices.py  random_matrices.py
preprocessing-gplus/: generate_matrices.py
preprocessing/config/: config.py  config.yaml
preprocessing/data/m_g_ms_gs/: labels.csv  labels.mtx
preprocessing/datasets/: data_helper.py
preprocessing/utils/: hypergraph_utils.py
python-src/: main.py  matrix_utils.py  model.py  testing_ground.py  trainer.py  utils.py  variables.py
python-src/examples/: test_utils.py  testing_ground.py
python-src/utils/: data_utils.py  matrix_utils.py  train_utils.py
scripts/: base.sh  dist-model.sh  dist-timing.sh  forward-timing.sh  gemm-timing.sh  random-matrices.sh  spgemm-timing.sh  timing.sh  torch-matrix-bench.sh  torch-model.sh  torch-spmatrix-bench.sh
src/: example.cpp  example_2.cpp  example_model.cpp  forward_timing.cpp  hgnn.h  main.cpp  matrix_bench.cpp  openBLAS_example.cpp  spmatrix_bench.cpp  test_hgnn.cpp  test_hgnn.h  timing.cpp  torch_matrix_bench.cpp  torch_spmatrix_bench.cpp
src/DenseMatrix/: DenseMatrix.cpp  DenseMatrix.h  DenseMatrixAlgorithms.cpp  DenseMatrixAlgorithms.h  DenseMatrixPRead.cpp  DistributedDGEMM.cpp  DistributedSpDGEMM.cpp
src/examples/: example.cpp  example_2.cpp  example_model.cpp  example_sddmm.cpp  openBLAS_example.cpp
src/model/: dist-model-w.cpp  dist-model-w.h  dist-model.cpp  dist-model.h  dist-model_no_w.cpp  dist-model_no_w.h  model.cpp  model.h
src/trainer/: dist-trainer.cpp  dist-trainer.h  trainer.cpp  trainer.h
src/utils/: DenseMatrix.h  DerivativeFunctions.cpp  DerivativeFunctions.h  LossFn.cpp  LossFn.h  configParse.cpp  configParse.h  parDenseGEMM.cpp  parDenseGEMM.h  scores.cpp  scores.h
tests/: CMakeLists.txt  testScoreFunctions.cpp
trainer/: trainer.cpp  trainer.h
utils/: configParse.cpp  configParse.h  data_utils.cpp  data_utils.h  fileParse.h  scores.cpp  scores.h
